# poc-realtime-ai-assistant

./: .env.sample  .gitignore  README.md  TOOLS.md  active_memory.json  browser.json  personalization.json  pyproject.toml  runtime_time_table.jsonl
AI_DOCS/: event_docs.md  js_implementation.md  realtime_api_docs.md
AI_SPEC/: assistant_memory_and_dir_management.md
db/: mock_data.sql  mock_data_for_duckdb.sql  mock_duck.duckdb  mock_duckdb.duckdb  mock_sqlite.db
src/realtime_api_async_python/: __init__.py  main.py  test_api_key.py  test_realtime_connection.py
src/realtime_api_async_python/audio/: bidirectional_audio.py
src/realtime_api_async_python/modules/: async_microphone.py  audio.py  database.py  llm.py  logging.py  memory_management.py  mermaid.py  postgres_sql.py  tools.py  utils.py
src/realtime_api_async_python/openai/: chat_prompt.py  models.py  session_update.py  structured_output_prompt.py
src/realtime_api_async_python/tests/: memory_management.py  utils_test.py
src/realtime_api_async_python/tools/: all_tools.py  file_operations.py  get_current_time.py  get_random_number.py  open_browser.py
src/realtime_api_async_python/utils/: encode_audio.py  load_config.py  logging.py  timeit_decorator.py
